# wikigraph

./: .gitignore  Dockerfile  README.md  TODO.md  airflow.cfg  docker-compose.yaml  entrypoint.sh  pyproject.toml
dags/: wikigraph_dag.py
logs/scheduler/: latest
src/: data_transformer.py  sparql.py
tests/: conftest.py  test_data_transformer.py  test_neo4j_utils.py  test_sparql.py  test_sparql_and_neo4j.py
tests/test_data/: test_members.json  test_members_discard.json  test_relationships.json  test_relationships_discard.json
wikigraph/: __init__.py  __main__.py  config.py  data_transformer.py  exceptions.py  log_helper.py  logger.py  models.py  neo4j_utils.py  sparql.py
