[tool.poetry]
name = "wikigraph"
version = "0.1.0"
description = "Extract and store graph data from Wikipedia articles in a Neo4j database."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
SPARQLWrapper = "*"
neo4j = "*"
apache-airflow = "*"
psycopg2 = "*"
celery = "*"
flower = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
