[tool.poetry]
name = "wikigraph"
version = "0.1.0"
description = "Extract and store graph data from Wikipedia articles in a Neo4j database."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "*"
SPARQLWrapper = "*"
neo4j = "*"
apache-airflow = {version = "*", extras = ["celery"]}
psycopg2 = "*"
#celery = "*"
flower = "*"
redis = {version = "*", extras = ["hiredis"]}
pydantic = "^1.10.6"
python-json-logger = "*"
injector = "*"


[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
